@@ -1,3 +1,8 @@
+2007-02-02  Bruno JOFRET  <bruno.jofret@inria.fr>
+
+	* src/type :
+	Add C99 compatibility. Double implementation.
+
 2007-01-31  Bruno JOFRET  <bruno.jofret@inria.fr>
 
 	* src/elementaryFunctions/*.c :
